fix: disable double tap zoom on ios

--- a/css/metronome.css
+++ b/css/metronome.css
@@ -1,3 +1,7 @@
+* {
+	touch-action: manipulation;
+}
+
 body {
 	font-family: Helvetica, sans-serif;
 	color: #000000;
